fix: home card gap

--- a/styles/index.css
+++ b/styles/index.css
@@ -703,6 +703,7 @@ body[data-page-url*="/discography"] {
     display: none;
   }
 
+  .wuQsKLTukGW5aeEAHxiu,
   .main-gridContainer-gridContainer {
     gap: var(--s-md);
     .search-searchCategory-contentArea {
